// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infiniteloading base 1`] = `
<div>
  <div
    class="nut-infiniteloading"
  >
    <div
      class="nut-infinite-top"
      style="height: 0px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="top-box"
      >
        松开刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    />
  </div>
</div>
`;

exports[`pull base 1`] = `
<div>
  <div
    class="nut-infiniteloading"
  >
    <div
      class="nut-infinite-top"
      style="height: 10px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="top-box"
      >
        松开刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    />
  </div>
</div>
`;

exports[`pull base 2`] = `
<div>
  <div
    class="nut-infiniteloading"
  >
    <div
      class="nut-infinite-top"
      style="height: 10px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="top-box"
      >
        松开刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    />
  </div>
</div>
`;
